[gd_scene load_steps=5 format=3 uid="uid://qjo51es7hbnr"]

[ext_resource type="Script" uid="uid://qqo26vx2bish" path="res://Scripts/ant.gd" id="1_yahas"]
[ext_resource type="Texture2D" uid="uid://bhm5cbnlvkisa" path="res://icon.svg" id="2_y1ll1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yahas"]
radius = 33.0606

[sub_resource type="Curve2D" id="Curve2D_c1ub6"]

[node name="ant" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_yahas")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(3.8147e-06, 6)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_y1ll1")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="GroundCollision" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 6)
shape = SubResource("CircleShape2D_yahas")

[node name="DigPath" type="Node2D" parent="."]

[node name="Line2D" type="Line2D" parent="DigPath"]

[node name="digPath" type="Path2D" parent="DigPath"]
curve = SubResource("Curve2D_c1ub6")

[node name="followPath" type="PathFollow2D" parent="DigPath/digPath"]

[connection signal="body_shape_entered" from="Area2D" to="." method="_on_area_2d_body_shape_entered"]
